--- a/contrib/nvchad.desktop
+++ b/contrib/nvchad.desktop
@@ -75,8 +75,8 @@ Comment[vi]=Soạn thảo tập tin văn bản
 Comment[wa]=Asspougnî des fitchîs tecses
 Comment[zh_CN]=编辑文本文件
 Comment[zh_TW]=編輯文字檔
-TryExec=nvchad
-Exec=nvchad %F
+TryExec=nvim
+Exec=nvim %F
 Terminal=true
 Type=Application
 Keywords=Text;editor;
